--- a/app/src/main/res/menu/nav_view.xml
+++ b/app/src/main/res/menu/nav_view.xml
@@ -2,6 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/subjectsFragment"
+        android:title="@string/nav_study" />
+    <item
         android:id="@+id/profileFragment"
         android:title="@string/nav_profile" />
 
