--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -43,6 +43,19 @@
         <argument
             android:name="subject_id"
             app:argType="long" />
+        <action
+            android:id="@+id/actionOpenSubtopics"
+            app:destination="@id/subtopicsFragment" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/subtopicsFragment"
+        android:name="com.vaibhavdhunde.app.elearning.ui.subtopics.SubtopicsFragment"
+        android:label="@string/label_subtopics"
+        tools:layout="@layout/fragment_subtopics" >
+        <argument
+            android:name="topic_id"
+            app:argType="long" />
     </fragment>
 
 </navigation>
