--- a/app/src/main/res/layout/fragment_subjects.xml
+++ b/app/src/main/res/layout/fragment_subjects.xml
@@ -18,60 +18,69 @@
             type="com.vaibhavdhunde.app.elearning.ui.subjects.SubjectsListAdapter" />
     </data>
 
-    <com.vaibhavdhunde.app.elearning.util.ScrollChildSwipeRefreshLayout
-        android:id="@+id/refresh"
+    <LinearLayout
+        android:id="@+id/fragment_subjects"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:onRefresh="@{viewmodel}"
-        tools:context=".ui.subjects.SubjectsFragment">
+        android:orientation="vertical">
 
-        <LinearLayout
-            android:id="@+id/fragment_subjects"
+        <FrameLayout
+            android:id="@+id/progress_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:visibility="@{viewmodel.dataLoading ? View.VISIBLE : View.GONE}"
+            tools:visibility="gone">
 
-            <FrameLayout
-                android:id="@+id/progress_container"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:visibility="@{viewmodel.dataLoading ? View.VISIBLE : View.GONE}"
-                tools:visibility="gone">
+            <ProgressBar
+                android:id="@+id/progress_indicator"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center" />
 
-                <ProgressBar
-                    android:id="@+id/progress_indicator"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center" />
+        </FrameLayout>
 
-            </FrameLayout>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/list_subjects"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:clipToPadding="false"
+            android:paddingTop="8dp"
+            android:paddingBottom="8dp"
+            android:scrollbarStyle="outsideOverlay"
+            android:scrollbars="vertical"
+            android:visibility="@{viewmodel.empty ? View.GONE : View.VISIBLE}"
+            app:adapter="@{adapter}"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:subjects="@{viewmodel.subjects}"
+            tools:listitem="@layout/item_subject" />
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/list_subjects"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:clipToPadding="false"
-                android:paddingTop="8dp"
-                android:paddingBottom="8dp"
-                android:scrollbarStyle="outsideOverlay"
-                android:scrollbars="vertical"
-                android:visibility="@{viewmodel.empty ? View.GONE : View.VISIBLE}"
-                app:adapter="@{adapter}"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                app:subjects="@{viewmodel.subjects}"
-                tools:listitem="@layout/item_subject" />
+        <LinearLayout
+            android:id="@+id/no_subjects_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:padding="16dp"
+            android:visibility="@{viewmodel.empty ? View.VISIBLE : View.GONE}">
 
             <TextView
-                android:id="@+id/no_subjects"
+                android:id="@+id/no_subjects_label"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:gravity="center"
-                android:padding="16dp"
                 android:text="@string/no_subjects"
-                android:visibility="@{viewmodel.empty ? View.VISIBLE : View.GONE}" />
+                android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btn_retry"
+                android:layout_width="wrap_content"
+                android:onClick="@{() -> viewmodel.loadSubjects()}"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="@string/retry" />
 
         </LinearLayout>
 
-    </com.vaibhavdhunde.app.elearning.util.ScrollChildSwipeRefreshLayout>
+    </LinearLayout>
 
 </layout>
