Play subtopic video

--- a/app/src/main/res/layout/fragment_subtopic.xml
+++ b/app/src/main/res/layout/fragment_subtopic.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
@@ -72,10 +73,15 @@
                 android:orientation="vertical"
                 android:visibility="@{viewmodel.dataAvailable ? View.VISIBLE : View.GONE}">
 
-                <View
+                <com.google.android.exoplayer2.ui.PlayerView
+                    android:id="@+id/player_view"
                     android:layout_width="match_parent"
                     android:layout_height="240dp"
-                    android:background="@android:color/darker_gray" />
+                    app:resize_mode="fill"
+                    app:fastforward_increment="10000"
+                    app:hide_on_touch="true"
+                    app:rewind_increment="10000"
+                    app:show_buffering="always" />
 
                 <TextView
                     android:id="@+id/subtopic_title"
