--- a/app/src/main/res/layout/fragment_blog_details.xml
+++ b/app/src/main/res/layout/fragment_blog_details.xml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/fragment_dashboard"
+    android:id="@+id/fragment_blog_details"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DashboardFragment">
+    tools:context=".ui.blogdetails.BlogDetailsFragment">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="Dashboard"
-        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-        tools:ignore="HardcodedText" />
+        android:text="@string/label_blog_details"
+        android:textAppearance="@style/TextAppearance.AppCompat.Title" />
 
 </FrameLayout>
